# IntNavLib

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh
apps/inertial_navigation_ecef/: CMakeLists.txt
apps/inertial_navigation_ecef/src/: inertial_navigation_ecef.cpp
apps/ins_ecef/: CMakeLists.txt
apps/ins_ecef/src/: ins_ecef.cpp
apps/lc_ins_gnss/: CMakeLists.txt
apps/lc_ins_gnss/src/: lc_ins_gnss.cpp
apps/lc_ins_gnss_ecef/: CMakeLists.txt
apps/lc_ins_gnss_ecef/src/: lc_ins_gnss_ecef.cpp
apps/lc_ins_pos_ecef/: CMakeLists.txt
apps/lc_ins_pos_ecef/src/: lc_ins_pos_ecef.cpp
apps/lc_ins_pos_rot_ecef/: CMakeLists.txt
apps/lc_ins_pos_rot_ecef/src/: lc_ins_pos_rot_ecef.cpp
apps/nav_sim/: CMakeLists.txt
apps/nav_sim/aircraft/c310/: c310.xml  c310ap.xml  c310ap_est.xml
apps/nav_sim/cmake/: FindOSG.cmake  FindOsgEarth.cmake
apps/nav_sim/config/: closed_loop.json  faster_world.earth  open_loop.json
apps/nav_sim/src/: nav_sim.cpp
apps/nav_sim/systems/: GNCUtilities_est.xml
apps/nav_sim_cl/: CMakeLists.txt
apps/nav_sim_cl/src/: nav_sim_cl.cpp
apps/nav_sim_ol/: CMakeLists.txt
apps/nav_sim_ol/src/: nav_sim_ol.cpp
apps/ros2_bag_writer/: .gitignore  CMakeLists.txt  package.xml
apps/ros2_bag_writer/src/: ros2_bag_writer.cpp
apps/ros2_lc_ins_gnss_ecef/: .gitignore  CMakeLists.txt  package.xml
apps/ros2_lc_ins_gnss_ecef/config/: Profile_3_config.yaml  config.rviz
apps/ros2_lc_ins_gnss_ecef/launch/: Profile_3_launch.py
apps/ros2_lc_ins_gnss_ecef/msg/: GnssPosVelMeasEcef.msg
apps/ros2_lc_ins_gnss_ecef/src/: ros2_lc_ins_gnss_ecef.cpp  ros2_relative_pose_publisher.cpp
apps/tc_ins_gnss_ecef/: CMakeLists.txt
apps/tc_ins_gnss_ecef/src/: tc_ins_gnss_ecef.cpp
apps/tc_ins_gnss_ecef_ros2/: CMakeLists.txt  package.xml
apps/tc_ins_gnss_ecef_ros2/src/: tc_ins_gnss_ecef.cpp
cmake/: intnavlibConfig.cmake.in
docs/: TODO.md  kanban.md
include/: constants_types.h  errors_sigmas_ecef_writer.h  errors_writer.h  helpers.h  helpers_impl.h  intnavlib.h  kalman.h  lc_ins_gnss.h  motion_profile_reader.h  motion_profile_writer.h  nav_equations.h  navigation.h  navigation_impl.h  simulation.h  simulation_impl.h
results/: Profile_3_ins.csv  Profile_3_ins_20240701_233051.csv  Profile_3_ins_errors.csv  Profile_4_lc_ins_pos_ecef.csv  Profile_4_lc_ins_pos_ecef_errors.csv
scripts/: build.sh  doc.sh  lint.sh  profile.sh  test.sh  test_coverage.sh  uninstall.sh
scripts/hooks/: pre-commit
src/: helpers.cpp  ins_ecef_demo.cpp  kalman.cpp  kalman.h  lc_ins_gnss.cpp  main.cpp  nav_equations.cpp  navigation.cpp  simulation.cpp
tests/: test_ins_ecef.cpp  test_ins_ideal.cpp  test_integrated.cpp  test_kinematics_ins_ecef.cpp  test_lc_ins_gnss_ecef.cpp  test_tc_ins_gnss_ecef.cpp
utils/: CMakeLists.txt  compute_errors.cpp  lla_to_enu_ecef.py  plot_errors.py  plot_errors_ned.py  plot_errors_sigmas.py  plot_errors_sigmas_ecef.py  plot_eval.py  plot_profile.py  plot_profile_ned.py
utils/cmake/: Findintnavlib.cmake
